updated ExecutingSimulatorTest doc.